# advent-of-code

./: .gitignore  Cargo.toml  README.md
2025/day1/: Cargo.toml  day1.md
2025/day1/src/: main.rs
2025/day10/src/: main.rs
2025/day11/src/: main.rs
2025/day12/src/: main.rs
2025/day2/: Cargo.toml  day2.md
2025/day2/src/: main.rs
2025/day3/: Cargo.toml  day3.md
2025/day3/src/: main.rs
2025/day4/: Cargo.toml  day4.md
2025/day4/src/: main.rs
2025/day5/: Cargo.toml  day5.md
2025/day5/src/: main.rs
2025/day6/: Cargo.toml  day6.md  input
2025/day6/src/: main.rs
2025/day7/: day7.md
2025/day7/src/: main.rs
2025/day8/: day8.md
2025/day8/src/: main.rs
2025/day9/: day9.md
2025/day9/src/: main.rs
2025/utils/src/: lib.rs
2025/utils/src/structs/: mod.rs  stopwatch.rs
